--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<!-- Header -->
 				<header id="header" class="alt">
 					<h1><a href="index.html">Wavez</a> by a Surfer for Surfers</h1>
-					<nav id="nav">
+					<!-- <nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
@@ -39,17 +39,17 @@
 							</li>
 							<li><a href="#" class="button">Sign Up</a></li>
 						</ul>
-					</nav>
+					</nav> -->
 				</header>
 
 			<!-- Banner -->
 				<section id="banner">
 					<h2>Wavez</h2>
-					<p>Another fine responsive site template freebie by HTML5 UP.</p>
-					<ul class="actions special">
+					<p>A Surefer's Forecast</p>
+					<!-- <ul class="actions special">
 						<li><a href="#" class="button primary">Sign Up</a></li>
 						<li><a href="#" class="button">Learn More</a></li>
-					</ul>
+					</ul> -->
 				</section>
 
 			<!-- Main -->
@@ -57,11 +57,8 @@
 
 					<section class="box special">
 						<header class="major">
-							<h2>Introducing the ultimate mobile app
-							<br />
-							for doing stuff with your phone</h2>
-							<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
-							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
+							<h2>Thousands of surf spots worldwide, in your pocket</h2>
+							<p>Explore, Discover and plan ahead your next surfing advanture.</p>
 						</header>
 						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
 					</section>
@@ -123,7 +120,7 @@
 				</section>
 
 			<!-- CTA -->
-				<section id="cta">
+				<!-- <section id="cta">
 
 					<h2>Sign up for beta access</h2>
 					<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
@@ -139,7 +136,7 @@
 						</div>
 					</form>
 
-				</section>
+				</section> -->
 
 			<!-- Footer -->
 				<footer id="footer">
@@ -152,7 +149,7 @@
 						<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Wavez. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
